--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -22,7 +22,11 @@
       <h4>Popular Movies</h4>
       <ion-row class="carousel">
         <ion-col class="ion-pad">
-          <span *ngFor="let item of popularMovies" class="movie-thumb">
+          <span
+            *ngFor="let item of popularMovies"
+            class="movie-thumb"
+            (click)="viewMovie(item.id)"
+          >
             <img src="{{base_url}}{{item.poster_path}}" />
           </span>
         </ion-col>
@@ -31,7 +35,11 @@
       <h4>Top Rated</h4>
       <ion-row class="carousel">
         <ion-col class="ion-pad">
-          <span *ngFor="let item of topRatedMovies" class="movie-thumb">
+          <span
+            *ngFor="let item of topRatedMovies"
+            class="movie-thumb"
+            (click)="viewMovie(item.id)"
+          >
             <img src="{{base_url}}{{item.poster_path}}" />
           </span>
         </ion-col>
@@ -40,7 +48,11 @@
       <h4>Trending Today</h4>
       <ion-row class="carousel">
         <ion-col class="ion-pad">
-          <span *ngFor="let item of trendingMovies" class="movie-thumb">
+          <span
+            *ngFor="let item of trendingMovies"
+            class="movie-thumb"
+            (click)="viewMovie(item.id)"
+          >
             <img src="{{base_url}}{{item.poster_path}}" />
           </span>
         </ion-col>
@@ -77,7 +89,7 @@
   <div
     *ngFor="let item of searchRes"
     class="movie-search-result"
-    (click)="viewMovie(item.id, item.title, item.poster_path);"
+    (click)="viewMovie(item.id);"
   >
     <ion-grid>
       <ion-row>
