YouTube API functional + showing thumbnail on view

--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -33,11 +33,9 @@
     {{item.name}}{{noCastErrorMsg}}
   </div>
   <h1>Trailer</h1>
-  <!-- <iframe
-    width="100%"
-    height="315"
-    src="{{videoURL}}{{movieTrailer.id}}"
-    frameborder="0"
-    allowfullscreen
-  ></iframe> -->
+  <img
+    style="width: 240px"
+    src="{{movieTrailerThumb}}"
+    alt="Movie Trailer Thumbnail"
+  />
 </ion-content>
