--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -27,6 +27,14 @@
           expand="block"
           >Login</ion-button
         >
+        <ion-button
+          type="submit"
+          color="danger"
+          (click)="authService.GoogleAuth()"
+          expand="block"
+        >
+          Login with Google
+        </ion-button>
       </ion-col>
     </ion-row>
   </form>
