Fixed annoying HTML auto-formating

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -21,19 +21,10 @@
 
     <ion-row>
       <ion-col>
-        <ion-button
-          type="submit"
-          (click)="logIn(email, password)"
-          expand="block"
-          >Login</ion-button
-        >
-        <ion-button
-          type="submit"
-          color="danger"
-          (click)="authService.GoogleAuth()"
-          expand="block"
-        >
+        <ion-button type="submit" (click)="logIn(email, password)" expand="block">Login</ion-button>
+        <ion-button type="submit" color="danger" (click)="authService.GoogleAuth()" expand="block">
           Login with Google
+          <ion-icon slot="start" name="logo-google"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
