--- a/src/app/pages/registration/registration.page.html
+++ b/src/app/pages/registration/registration.page.html
@@ -21,24 +21,13 @@
 
     <ion-row>
       <ion-col>
-        <ion-button
-          type="submit"
-          (click)="signUp(email, password)"
-          expand="block"
-          >Register</ion-button
-        >
+        <ion-button type="submit" (click)="signUp(email, password)" expand="block">Register</ion-button>
       </ion-col>
     </ion-row>
     <ion-row> Already Registered? </ion-row>
-    <ion-row
-      ><ion-col>
-        <ion-button
-          type=""
-          (click)="openLoginPage()"
-          expand="block"
-          color="tertiary"
-          >Login</ion-button
-        >
+    <ion-row>
+      <ion-col>
+        <ion-button type="" (click)="openLoginPage()" expand="block" color="tertiary">Login</ion-button>
       </ion-col>
     </ion-row>
   </form>
