--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -2,18 +2,9 @@
   <ion-toolbar> </ion-toolbar>
   <ion-toolbar>
     <ion-buttons>
-      <ion-searchbar
-        placeholder="Search for a movie"
-        inputmode="search"
-        type="search"
-        (ionChange)="basicSearch($event.target.value)"
-        (ionClear)="clearResults()"
-        (ionFocus)="showTab()"
-        [debounce]="250"
-        showCancelButton="focus"
-        enterkeyhint="search"
-        spellcheck="true"
-      ></ion-searchbar>
+      <ion-searchbar placeholder="Search for a movie" inputmode="search" type="search"
+        (ionChange)="basicSearch($event.target.value)" (ionClear)="clearResults()" (ionFocus)="showTab()"
+        [debounce]="250" showCancelButton="focus" enterkeyhint="search" spellcheck="true"></ion-searchbar>
     </ion-buttons>
   </ion-toolbar>
 
@@ -22,11 +13,7 @@
       <h4>Popular Movies</h4>
       <ion-row class="carousel">
         <ion-col class="ion-pad">
-          <span
-            *ngFor="let item of popularMovies"
-            class="movie-thumb"
-            (click)="viewMovie(item.id)"
-          >
+          <span *ngFor="let item of popularMovies" class="movie-thumb" (click)="viewMovie(item.id)">
             <img src="{{posterUrl}}{{item.poster_path}}" />
           </span>
         </ion-col>
@@ -35,11 +22,7 @@
       <h4>Top Rated</h4>
       <ion-row class="carousel">
         <ion-col class="ion-pad">
-          <span
-            *ngFor="let item of topRatedMovies"
-            class="movie-thumb"
-            (click)="viewMovie(item.id)"
-          >
+          <span *ngFor="let item of topRatedMovies" class="movie-thumb" (click)="viewMovie(item.id)">
             <img src="{{posterUrl}}{{item.poster_path}}" />
           </span>
         </ion-col>
@@ -48,11 +31,7 @@
       <h4>Trending Today</h4>
       <ion-row class="carousel">
         <ion-col class="ion-pad">
-          <span
-            *ngFor="let item of trendingMovies"
-            class="movie-thumb"
-            (click)="viewMovie(item.id)"
-          >
+          <span *ngFor="let item of trendingMovies" class="movie-thumb" (click)="viewMovie(item.id)">
             <img src="{{posterUrl}}{{item.poster_path}}" />
           </span>
         </ion-col>
@@ -86,11 +65,7 @@
 
 <ion-content [hidden]="showSearchResults" class="Search-results">
   <div class="search-text">Search results for "{{inputDisplay}}"</div>
-  <div
-    *ngFor="let item of searchRes"
-    class="movie-search-result"
-    (click)="viewMovie(item.id);"
-  >
+  <div *ngFor="let item of searchRes" class="movie-search-result" (click)="viewMovie(item.id);">
     <ion-grid>
       <ion-row>
         <ion-col size="auto">
