Retrived reviews from FStore and displayed on UI

--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -47,5 +47,6 @@
   </div>
   <div *ngIf="segmentModel === 'reviews'">
     <p>This is where the reviews are</p>
+    <p>{{reviewsArray}}</p>
   </div>
 </ion-content>
