--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,13 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>tab4</ion-title>
+    <ion-title> {{displayD.displayName}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-button (click)="authService.SetUserData('hL8JDKDD14dFXbUU6sTPMgpc34n2')">
-    Click me
-  </ion-button>
   <div>
     UserID: {{ displayD.uid }}
     <!-- {{data.property}} -->
