--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -37,8 +37,7 @@
     </div>
     <h2>Cast</h2>
     <ion-text animated style="width: 50%" [hidden]="hideCastMessage">Sorry, there is no information regarding cast
-      members of this
-      movie</ion-text>
+      members of this movie</ion-text>
     <div *ngFor="let item of creditsRes.cast | slice:0:16 ">
       {{item.name}}{{noCastErrorMsg}}
     </div>
@@ -46,7 +45,24 @@
     <img style="width: 240px" src="{{movieTrailerThumb}}" alt="Movie Trailer Thumbnail" />
   </div>
   <div *ngIf="segmentModel === 'reviews'">
-    <p>This is where the reviews are</p>
-    <p>{{reviewsArray}}</p>
+
+    <ion-card *ngFor="let review of returnedReview">
+      <ion-row>
+        <ion-col size="4">
+          <img style="width: 40px" src="{{review.data.authorPhoto}}" alt="Profile Picture" />
+        </ion-col>
+        <ion-col size="8">
+          <ion-card-title>{{review.data.authorName}}</ion-card-title>
+        </ion-col>
+      </ion-row>
+      <ion-card-subtitle>{{reviewDay}}{{reviewDate}}</ion-card-subtitle>
+      <p>{{reviewTime}}</p>
+      <ion-card-content>
+        {{review.data.content}}
+      </ion-card-content>
+      <!-- <p>
+        timeAGo.timeAgo({{dateTemp}})
+      </p> -->
+    </ion-card>
   </div>
 </ion-content>
