--- a/src/app/pages/movie-page/movie-page.page.scss
+++ b/src/app/pages/movie-page/movie-page.page.scss
@@ -3,12 +3,14 @@
     display: grid;
     // place-items: center;
     height: 400px;
+    color: white;
+    font-weight: bold;
 }
 
 .movie-page__top__poster{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10%;
+    margin-top: 4%;
     width: 120px;
     // box-shadow: 0px 0px 1px 1px black;
 }
@@ -23,17 +25,22 @@
 }
 
 .movie-page__top__facts{
-    color: white;
     text-align: center;
     margin-bottom: 0;
 }
 
 .movie-page__top__fact{
     display: inline;
-    font-weight: bold;
 }
 
 .movie-page__top__fact ~ div:before{
     content:" • ";
+}
 
+.movie-page__top__imdb{
+    text-align: center;
+}
+
+.movie-page__top__imdb__image{
+    width: 40px;
 }
