--- a/src/app/pages/movie-page/movie-page.page.scss
+++ b/src/app/pages/movie-page/movie-page.page.scss
@@ -2,16 +2,16 @@
 .movie-page__top {
     display: grid;
     // place-items: center;
-    height: 400px;
+    height: 500px;
     color: white;
-    font-weight: bold;
+    // font-weight: bold;
 }
 
 .movie-page__top__poster{
     margin-left: auto;
     margin-right: auto;
     margin-top: 4%;
-    width: 120px;
+    height: 250px;
     // box-shadow: 0px 0px 1px 1px black;
 }
 
@@ -19,9 +19,11 @@
     width: 100%;
     position: absolute;
     z-index: -1;
-    height: 300px;
+    height: 500px;
     object-fit: cover; 
     filter: brightness(0.4);
+    // filter: blur(0.5px);
+    background-color:#1d6adc;
 }
 
 .movie-page__top__facts{
@@ -43,4 +45,11 @@
 
 .movie-page__top__imdb__image{
     width: 40px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+.movie-page__top__imdb__rating{
+    vertical-align: middle;
+    display: inline;
 }
